--- a/style.css
+++ b/style.css
@@ -35,3 +35,21 @@ body {
 
 .text-bold {
 	font-weight: bold;
+}
+
+footer {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  right: 0;
+  z-index: 0;
+  background-color: #125463;
+  color: white;
+  height: 40px;
+  text-align: center;
+  padding: 11px;
+}
+
+.v-center {
+
+}
